Marks management done

--- a/src/app/account/my-account/my-account.page.html
+++ b/src/app/account/my-account/my-account.page.html
@@ -56,7 +56,7 @@
 
         <hr color="primary">
         <div class="logout-section">
-          <ion-button color="primary" (click)="userSignOut()">Logout</ion-button>
+          <ion-button color="primary" (click)="signOutHere()">Logout</ion-button>
         </div>
 
       </ion-grid>
