--- a/src/app/allocate/teacher-allocation-view/teacher-allocation-view.page.html
+++ b/src/app/allocate/teacher-allocation-view/teacher-allocation-view.page.html
@@ -35,7 +35,7 @@
 
 
 <ion-content>
-  <form [formGroup]="allocationForm" *ngIf="allocationForm" (ngSubmit)="updateAllocationForm()">
+  <form [formGroup]="allocationForm" *ngIf="allocationForm" (ngSubmit)="save()">
     <ion-card>
       <ion-card-content>
         <ion-list>
