--- a/src/app/academic/classes/classes.page.html
+++ b/src/app/academic/classes/classes.page.html
@@ -44,7 +44,7 @@
       <ion-grid>
         <ion-row>
           <ion-col size="3" class="ion-text-center">
-            {{item.className}} {{item.section}}
+            {{item.className}}
           </ion-col>
           <ion-col size="6" class="ion-text-center">
             {{item.classTeacher}}
