--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -53,7 +53,7 @@
               Teacher Allocation
             </ion-label>
           </ion-item>
-          <ion-item button (click)="showInfoAlert()">
+          <!-- <ion-item button (click)="showInfoAlert()">
             <ion-icon slot="start" name='calendar-outline'></ion-icon>
             <ion-label>
               Time Table
@@ -64,7 +64,7 @@
             <ion-label>
               Subjects
             </ion-label>
-          </ion-item>
+          </ion-item> -->
         </ion-menu-toggle>
       </ion-list>
     </ion-content>
